Ensure sidenav overlapping chat buttons

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -100,6 +100,9 @@ span:has(>span>.rHELf) {
     bottom: 29px !important;
   }
 }
+#menu {
+  z-index: 9999999;
+}
 
 .menu-topo {
   height: 40px;
